syntax = "proto3";

option go_package = ".;txmeta_api";

package txmeta_api;

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";

service TxMetaAPI {
  // Health returns the health of the API.
  rpc Health (google.protobuf.Empty) returns (HealthResponse) {}
  rpc Create (CreateRequest) returns (CreateResponse) {}
  rpc SetMined (SetMinedRequest) returns (SetMinedResponse) {}
  rpc Get (GetRequest) returns (GetResponse) {}
  rpc Delete (DeleteRequest) returns (DeleteResponse) {}
}

// swagger:model HealthResponse
message HealthResponse {
  bool ok = 1;
  string details = 2;
  google.protobuf.Timestamp timestamp = 3;
}

// swagger:enum Status
enum Status {
  // StatusUnknown is the default status.
  StatusUnknown = 0;
  // StatusUnconfirmed is the status of a transaction that has not been mined.
  StatusUnconfirmed = 1;
  // StatusConfirmed is the status of a transaction that has been mined.
  StatusConfirmed = 2;
}

// swagger:model SetRequest
message CreateRequest {
  bytes hash = 1;
  uint64 fee = 2;
  repeated bytes ParentTxHashes = 3;
  repeated bytes utxoHashes = 4;
  uint32 lockTime = 5;
  uint64 sizeInBytes = 6;
}

// swagger:model SetResponse
message CreateResponse {
  Status status = 1;
}

// swagger:model SetMinedRequest
message SetMinedRequest {
  bytes hash = 1;
  bytes block_hash = 2;
}

// swagger:model SetMinedResponse
message SetMinedResponse {
  Status status = 1;
}

// swagger:model GetRequest
message GetRequest {
  bytes hash = 1;
}

// swagger:model GetResponse
message GetResponse {
  Status status = 1;
  uint64 Fee = 2;
  repeated bytes ParentTxHashes = 3;
  repeated bytes UtxoHashes = 4;
  google.protobuf.Timestamp FirstSeen = 5;
  repeated bytes BlockHashes = 6;
  uint32 BlockHeight = 7;
  uint64 SizeInBytes = 8;
}

// swagger:model DeleteRequest
message DeleteRequest {
  bytes hash = 1;
}

// swagger:model DeleteResponse
message DeleteResponse {
  Status status = 1;
}
